<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <!-- Copyright (c) 2024, 2026, Oracle and/or its affiliates. -->
    <!-- Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl. -->
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.oracle.database.spring.cloud-stream-binder</groupId>
    <artifactId>spring-cloud-stream-binder-txeventq-sample</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <name>spring-cloud-stream-binder-txeventq-sample</name>
    <description>Spring Cloud Stream Binder for Oracle AI Database Transactional Event Queues Sample Application</description>

    <organization>
        <name>Oracle America, Inc.</name>
        <url>https://www.oracle.com</url>
    </organization>

    <developers>
        <developer>
            <name>Oracle</name>
            <email>obaas_ww at oracle.com</email>
            <organization>Oracle America, Inc.</organization>
            <organizationUrl>https://www.oracle.com</organizationUrl>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>The Universal Permissive License (UPL), Version 1.0</name>
            <url>https://oss.oracle.com/licenses/upl/</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/oracle/spring-cloud-oracle</url>
        <connection>scm:git:https://github.com/oracle/spring-cloud-oracle.git</connection>
        <developerConnection>scm:git:git@github.com:oracle/spring-cloud-oracle.git</developerConnection>
    </scm>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <txeventq.streambinder.version>0.19.0</txeventq.streambinder.version>
        <spring.boot.version>4.1.0</spring.boot.version>
        <spring.framework.version>7.0.8</spring.framework.version>
        <org.springframework.cloud.version>5.0.2</org.springframework.cloud.version>
        <oracle-spring-boot.version>26.2.0</oracle-spring-boot.version>
        <aqapi-jakarta.version>23.9.0.0</aqapi-jakarta.version>
        <testcontainers.version>2.0.5</testcontainers.version>
        <jackson.annotations.version>2.21</jackson.annotations.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-stream</artifactId>
                <version>${org.springframework.cloud.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oracle.database.messaging</groupId>
                <artifactId>aqapi-jakarta</artifactId>
                <version>${aqapi-jakarta.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>com.oracle.database.spring.cloud-stream-binder</groupId>
            <artifactId>spring-cloud-stream-binder-oracle-txeventq</artifactId>
            <version>${txeventq.streambinder.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <version>${spring.boot.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <version>${spring.boot.version}</version>
            <scope>test</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jms</artifactId>
            <version>${spring.framework.version}</version>
        </dependency>
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <version>4.3.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${jackson.annotations.version}</version>
        </dependency>
        <dependency>
            <groupId>com.oracle.database.spring</groupId>
            <artifactId>oracle-spring-boot-starter-ucp</artifactId>
            <version>${oracle-spring-boot.version}</version>
        </dependency>
        <dependency>
            <groupId>com.oracle.database.spring</groupId>
            <artifactId>oracle-spring-boot-starter-aqjms</artifactId>
            <version>${oracle-spring-boot.version}</version>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers-junit-jupiter</artifactId>
            <version>${testcontainers.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers</artifactId>
            <version>${testcontainers.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers-oracle-free</artifactId>
            <version>${testcontainers.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
     <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.6</version>
                <configuration>
                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
